--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <button class="self-start sm:self-auto text-gray-400 hover:text-gray-600 text-lg">
-      🗑️
+      <span><img src="./assets/Trash.png" alt=""></span>
     </button>
 
   </div>
@@ -102,7 +102,7 @@
     </div>
 
     <button class="self-start sm:self-auto text-gray-400 hover:text-gray-600 text-lg">
-      🗑️
+      <span><img src="./assets/Trash.png" alt=""></span>
     </button>
 
   </div>
@@ -145,7 +145,7 @@
     </div>
 
     <button class="self-start sm:self-auto text-gray-400 hover:text-gray-600 text-lg">
-      🗑️
+      <span><img src="./assets/Trash.png" alt=""></span>
     </button>
 
   </div>
@@ -188,7 +188,7 @@
     </div>
 
     <button class="self-start sm:self-auto text-gray-400 hover:text-gray-600 text-lg">
-      🗑️
+      <span><img src="./assets/Trash.png" alt=""></span>
     </button>
 
   </div>
@@ -231,7 +231,7 @@
     </div>
 
     <button class="self-start sm:self-auto text-gray-400 hover:text-gray-600 text-lg">
-      🗑️
+      <span><img src="./assets/Trash.png" alt=""></span>
     </button>
 
   </div>
@@ -274,7 +274,7 @@
     </div>
 
     <button class="self-start sm:self-auto text-gray-400 hover:text-gray-600 text-lg">
-      🗑️
+      <span><img src="./assets/Trash.png" alt=""></span>
     </button>
 
   </div>
@@ -317,7 +317,7 @@
     </div>
 
     <button class="self-start sm:self-auto text-gray-400 hover:text-gray-600 text-lg">
-      🗑️
+      <span><img src="./assets/Trash.png" alt=""></span>
     </button>
 
   </div>
@@ -360,7 +360,7 @@
     </div>
 
     <button class="self-start sm:self-auto text-gray-400 hover:text-gray-600 text-lg">
-      🗑️
+      <span><img src="./assets/Trash.png" alt=""></span>
     </button>
 
   </div>
